Closed
Bug 882514
Opened 12 years ago
Closed 12 years ago
OdinMonkey: TryEnablingIon fails for arrow functions FFI call with --ion-eager
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: bbouvier, Assigned: bbouvier)
References
Details
Attachments
(1 file)
|
1.13 KB,
patch
|
h4writer
:
review+
|
Details | Diff | Splinter Review |
(function m(a,ffi){"use asm"; var f = ffi.f; function g(){f();}return g})(this, {f: x=>x})
raises an assertion failure as the arrow function has no script, in TryEnablingIon.
Present in a test case of bug 882012.
Attachment #761821 -
Flags: review?(hv1989)
Comment 1•12 years ago
|
||
Don't forget to add the testcase to the patch.
| Assignee | ||
Comment 2•12 years ago
|
||
(In reply to Luke Wagner [:luke] from comment #1)
> Don't forget to add the testcase to the patch.
Should I move the test case present in the patch of bug 882012 in this patch?
Comment 3•12 years ago
|
||
That'd probably be best (for the bug/hg record).
Comment 4•12 years ago
|
||
Comment on attachment 761821 [details] [diff] [review]
proposed fix
Review of attachment 761821 [details] [diff] [review]:
-----------------------------------------------------------------
Nice find. Seems like we don't have testcase testing ffi calls to natives yet!
Please include a testcase.
::: js/src/ion/AsmJS.cpp
@@ +5231,5 @@
> }
>
> static inline bool
> +TryEnablingIon(JSContext *cx, AsmJSModule::ExitDatum *exitDatum, int32_t argc, Value *argv)
> +{
Thanks for correcting the accolade.
@@ +5233,5 @@
> static inline bool
> +TryEnablingIon(JSContext *cx, AsmJSModule::ExitDatum *exitDatum, int32_t argc, Value *argv)
> +{
> + JSScript *script = exitDatum->fun->maybeNonLazyScript();
> + if (script == NULL)
if (!script)
Attachment #761821 -
Flags: review?(hv1989) → review+
| Assignee | ||
Comment 5•12 years ago
|
||
Comment 7•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•