Bug 882514: Don't try to enable Ion on functions with no script; r=h4writer